[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "cardutil"
version = "0.7.2"
description = "Python package for working with payment card systems"
readme = "README.rst"
authors = [
  { name = "Anthony Delosa", email = "adelosa@gmail.com" }
]
license = "MIT"
urls = { "Homepage" = "https://github.com/adelosa/cardutil" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.9"

[project.optional-dependencies]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "cryptography >= 44"
]
test = [
  "flake8",
  "pytest",
  "bump2version",
  "coverage",
  "cryptography",
  "python-dateutil"
]
crypto = [
  "cryptography >= 44"
]

[project.scripts]
mci_ipm_to_csv = "cardutil.cli.mci_ipm_to_csv:cli_entry"
mci_csv_to_ipm = "cardutil.cli.mci_csv_to_ipm:cli_entry"
mci_ipm_encode = "cardutil.cli.mci_ipm_encode:cli_entry"
mci_ipm_param_encode = "cardutil.cli.mci_ipm_param_encode:cli_entry"
mci_ipm_param_to_csv = "cardutil.cli.mci_ipm_param_to_csv:cli_entry"
mideu = "cardutil.cli.mideu:cli_entry"
paramconv = "cardutil.cli.paramconv:cli_entry"

[tool.setuptools]
package-dir = {"" = "src"}
