[bumpversion]
current_version = 0.6.4
tag = True
commit = True
tag_name = v{new_version}

[pytest]
log_cli = true

[metadata]
name = cardutil
version = attr: cardutil.__version__
url = https://github.com/adelosa/cardutil
author = Anthony Delosa
author_email = adelosa@gmail.com
license = MIT
description = 'Python package for working with payment card systems'
long_description = file: README.rst
include_package_data = True
classifiers = 
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12

[options]
packages = find:

[options.extras_require]
docs = 
	sphinx
	sphinx_rtd_theme
	cryptography
test = 
	flake8
	pytest<8
	bump2version
	coverage
	cryptography
	python-dateutil
crypto = cryptography

[options.entry_points]
console_scripts = 
	mci_ipm_to_csv = cardutil.cli.mci_ipm_to_csv:cli_entry
	mci_csv_to_ipm = cardutil.cli.mci_csv_to_ipm:cli_entry
	mci_ipm_encode = cardutil.cli.mci_ipm_encode:cli_entry
	mci_ipm_param_encode = cardutil.cli.mci_ipm_param_encode:cli_entry
	mci_ipm_param_to_csv = cardutil.cli.mci_ipm_param_to_csv:cli_entry
	
	mideu = cardutil.cli.mideu:cli_entry
	paramconv = cardutil.cli.paramconv:cli_entry

[flake8]
max-line-length = 120
exclude = 
	.git,
	.pytest_cache,
	__pycache__,
	build,
	dist
	venv*

[bumpversion:file:cardutil/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[tool:pytest]
junit_family = xunit2
